--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "expo": {
     "name": "react-native-xnft",
-    "slug": "react-native-xnft",
-    "entryPoint": "./src/App"
+    "slug": "react-native-xnft"
   }
 }
